--- a/css/style.css
+++ b/css/style.css
@@ -148,12 +148,12 @@ img {
 /* ==========/HEADER========== */
 /* ==========HERO==========*/
 .page-hero {
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
     background: var(--secondary-text-color-theme-light);
     padding-top: 188px;
-    padding-bottom: 292px;
-    height: 600px;
+    padding-bottom: 188px;
+    /* height: 600px; */
 }
 
 .main-title {
