--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ img {
 /* CONTAINER*/
 .container {
     width: 1158px;
-    padding: 0 15px;
+    padding: 0 15px 0 15px;
     margin: 0 auto;
 }
 
@@ -93,6 +93,7 @@ img {
 
 .logo-header {
     margin-right: 76px;
+    padding: 24px 0 24px 0;
 }
 
 .logo-studio {
@@ -111,7 +112,7 @@ img {
     font-family: var(--secondary-font);
     display: flex;
     align-items: center;
-    column-gap: 40px;
+    gap: 40px;
 }
 
 .menu-item-nav {}
@@ -167,7 +168,7 @@ img {
     color: var(--primary-text-color-theme-dark);
     text-align: center;
 
-    max-width: 526px;
+    max-width: 496px;
     margin-bottom: 48px;
     margin-left: auto;
     margin-right: auto;
@@ -189,10 +190,13 @@ img {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    /* margin: 0 auto 188 auto; */
-    /* text-transform: uppercase;*/
-    /* min-width: 169px; */
+    height: 56px;
+    min-width: 169px;
+    border: none;
 }
+
+/* margin: 0 auto 188 auto; */
+/* text-transform: uppercase;*/
 
 .modal-btn:hover,
 .modal-btn:focus {
@@ -222,7 +226,7 @@ img {
 
 .page-strategy-container {
     display: flex;
-    column-gap: 24px;
+    gap: 24px;
     /* padding-top: 120px;
     padding-bottom: 120px; */
     /* align-items: center; */
@@ -309,8 +313,8 @@ img {
 }
 
 .menu-item-team-box {
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 16px 32px 16px;
+
 }
 
 .text-title-description {
@@ -322,6 +326,7 @@ img {
     letter-spacing: 0.02em;
     color: var(--secondary-text-color-theme-light);
     background-color: var(--primary-text-color-theme-dark);
+    margin-bottom: 8px;
 }
 
 .text-description {
@@ -341,12 +346,13 @@ img {
 /* ==========FOOTER========== */
 .footer-title {
     background: var(--secondary-text-color-theme-light);
-    /* padding-top: 100px;
-    padding-bottom: 100px; */
-}
+    padding: 100px 0 100px 0;
+    }
 
 .logo-footer {
-    padding:101px 0px 17px 156px;
+    display: inline-block;
+    /* padding: 101px 0px 17px 156px; */
+    margin-bottom: 16px;
 }
 
 .logo-studio-footer {
@@ -359,9 +365,11 @@ img {
     text-transform: uppercase;
 
 }
+
 .text-description-footer-item {
-    padding:0px 0px 100px 156px;
+    padding: 0px 0px 100px 156px;
 }
+
 .text-description-footer {
     font-family: var(--primary-font);
     font-weight: 400;
@@ -370,19 +378,23 @@ img {
     letter-spacing: 0.02em;
     color: var(--secondary-text-color-theme-dark);
     max-width: 264px;
+    /* padding: 0px 0px 100px 156px; */
 }
 
 /* ==========/FOOTER========== */
 
 /*portfolio.html*/
+.section-portfolio-page {
+    padding: 96px 0 120px;
+}
 
 .filter-btn-menu {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 96px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
     gap: 24px;
+    /* padding-top: 96px; */
 }
 
 .filter-btn {
@@ -395,7 +407,9 @@ img {
     background: var(--secondary-text-color-theme-dark);
     cursor: pointer;
     padding: 12px 24px;
-        /* width: calc((100%-96px)/5); */
+    border: 1px solid #e7e9fc;
+    border-radius: 4px;
+    /* width: calc((100%-96px)/5); */
 }
 
 .filter-btn:hover,
@@ -403,22 +417,35 @@ img {
     color: var(--primary-text-color-theme-dark);
     background: var(--accent-color);
 }
+.filter-btn:hover {
+    border: 1px solid #e7e9fc;
+}
+.filter-btn:focus {
+    border: 1px solid transparent; 
+}
+
 
 .portfolio-card-menu {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 48px;
-    grid-column-gap: 24px;
-    padding-bottom: 120px;
-    /* display: flex; */
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* grid-row-gap: 48px; */
+    /* grid-column-gap: 24px; */ 
+    /* padding-bottom: 120px; */
+    
     /* gap: 24px; */
-    /* flex-wrap: wrap; */
+    
 }
 
 .text-description-box-card {
     border: 1px solid #E7E9FC;
     border-top: none;
 }
+
 .text-title-description-card {
     font-family: var(--primary-font);
     font-weight: 500;
@@ -429,13 +456,14 @@ img {
     background-color: var(--primary-text-color-theme-dark);
     padding: 32px 0px 8px 16px;
 }
+
 .text-description-card {
     font-family: var(--primary-font);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var( --primary-text-color-theme-light);
+    color: var(--primary-text-color-theme-light);
     padding: 0px 0px 32px 16px;
 }
 
