--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-text-color-theme-light);
-    padding: 0px 0px 32px 16px;
+    /* padding: 0px 0px 32px 16px; */
 }
 
 /* .text-title-project-card */
